# vocal-metrics

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml
data/doc/: dev_notes.md  music_theory_notes.md
nginx/: default.conf
src/: analysis_pipeline.py  main.py
src/app_io/: __init__.py  format_to_json.py  load_audio.py  save_analysis.py
src/audio_io/: load_audio.py
src/auth/: ReadMe.md  auth_service.py  config.py  passwords.py
src/metrics/: ReadMe.md  __init__.py  extract_pitch.py  pitch_range.py  vibrato.py
src/report/: __init__.py  bedrock_report.py
src/ui/: ReadMe.md  analysis_ui.py  auth_ui.py  main_ui.py  streamlit_app.py
src/utils/: ReadMe.md  db.py
tests/: test_analysis_pipeline.py  test_storage.py  test_upload_analysis.py
tests/audio_io/: test_load_audio.py
tests/metrics/: test_extract_pitch.py
