[project]
name = "vocal-metrics"
version = "0.1.0"
description = "Provides a set of functions to retrieve the vocal metrics"
readme = "ReadMe.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.86",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "scipy>=1.16.3",
    "streamlit>=1.44.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
